# nvm-nava-core-interpreter

./: .gitmodules  CMakeLists.txt  README.md  main.cc
inc/nava/core/interpreters/: interpreter_language.h  parser.h  script_parser.h  source.h  source_loader.h  source_tree.h  utils.h
inc/nava/core/interpreters/python/: interpreter.h
inc/nava/core/interpreters/python/details/: core_func.h  core_obj.h  db_module.h  util_module.h
inc/nava/core/interpreters/sql/: expression.h  isqldialect.h  pqsql_dialect.h  sql_script_parser.h
navascript/: helo-python.py  navarun-complex.py  navarun.py
src/nava/core/interpreters/: utils.cc
